[project]
name = "Pint-Pandas"
authors = [
  {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"}
]
license = {text = "BSD"}
description = "Extend Pandas Dataframe with Physical quantities module"
readme = "README.rst"
keywords = ["physical", "quantities", "unit", "conversion", "science", "pandas", "dataframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dynamic = ["version"] # Version is taken from git tags using setuptools_scm
dependencies = [
  "pint>=0.24",
  "pandas>=2.2"
]

[tool.setuptools.package-data]
pint_pandas = [
      "py.typed"
      ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "pytest-subtests",
    "codecov",
    "coveralls",
    "nbval",
    "pyarrow"
]

[project.urls]
Homepage = "https://github.com/hgrecco/pint-pandas"

[tool.setuptools]
packages = ["pint_pandas"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
known-first-party= ["pint"]


[tool.ruff]
ignore = [
  # whitespace before ':' - doesn't work well with black
  # "E203",
  "E402",
  # line too long - let black worry about that
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # line break before binary operator
  # "W503"
]
extend-exclude = ["build"]
line-length=88

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:The unit of the quantity is*:UserWarning",
  # Filtering UnitStrippedWarning to focus on other warings.
  "ignore:to_compact applied*:RuntimeWarning",
  # Could be looked at later.
  "ignore:getargs*:DeprecationWarning",
  "ignore:The 'asynci*:RuntimeWarning",
  # Warnings that occur when running pytest
  ]
