[project]
name = "Pint-Pandas"
authors = [
  {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"}
]
license = {text = "BSD"}
description = "Extend Pandas Dataframe with Physical quantities module"
readme = "README.rst"
keywords = ["physical", "quantities", "unit", "conversion", "science", "pandas", "dataframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.11"
dynamic = ["version"] # Version is taken from git tags using setuptools_scm
dependencies = [
  "pint>=0.24",
  "pandas>=3.0",
  "packaging>=26.0"
]

[tool.setuptools.package-data]
pint_pandas = [
      "py.typed"
      ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "pytest-subtests",
    "pytest-benchmark",
    "codecov",
    "coveralls",
    "nbval",
    "pyarrow"
]
docs = [
  "sphinx>=6,<8.2",
  "ipython<=8.12",
  "nbsphinx",
  "jupyter_client",
  "ipykernel",
  "graphviz",
  "pooch",
  "sparse",
  "Serialize",
  "pygments>=2.4",
  "sphinx-book-theme>=1.1.0",
  "sphinx_copybutton",
  "sphinx_design",
  "matplotlib",
  "uncertainties-pandas",
]
[project.urls]
Homepage = "https://github.com/hgrecco/pint-pandas"

[tool.setuptools]
packages = ["pint_pandas"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
known-first-party= ["pint"]


[tool.ruff]
ignore = [
  # whitespace before ':' - doesn't work well with black
  # "E203",
  "E402",
  # line too long - let black worry about that
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # line break before binary operator
  # "W503"
  "F811",
]
extend-exclude = ["build"]
line-length=88

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:The unit of the quantity is*:UserWarning",
  # Filtering UnitStrippedWarning to focus on other warings.
  "ignore:to_compact applied*:RuntimeWarning",
  # Could be looked at later.
  "ignore:getargs*:DeprecationWarning",
  "ignore:The 'asynci*:RuntimeWarning",
  # Warnings that occur when running pytest
  ]

[tool.pixi.project]
channels = ["https://fast.prefix.dev/conda-forge"]
platforms = ['osx-arm64', 'linux-64', 'win-64']

[tool.pixi.tasks]

[tool.pixi.pypi-dependencies]
pint-pandas = { path = ".", editable = true }

[tool.pixi.environments]
lint = { features = ["lint"], no-default-feature = true }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run"

[tool.pixi.feature.docs.tasks]
docbuild = "sphinx-build -n -j auto -b html -d build/doctrees docs build/html"
doctest = "sphinx-build -a -j auto -b doctest -d build/doctrees docs build/doctest"

[tool.pixi.feature.docs.dependencies]
pandoc = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"
